--- a/notebooks/ecosystem_example.ipynb
+++ b/notebooks/ecosystem_example.ipynb
@@ -10,6 +10,7 @@
    },
    "source": [
     "# Ecosystem Example\n",
+    "[Florian Roscheck](https://www.linkedin.com/in/florianroscheck/), 2021-02-13\n",
     "\n",
     "This example shows how to use the [Ecosystem Class](../src/ecosystem.py). The class provides an easy interface for\n",
     "ingesting and analyzing ecosystem information.\n",
@@ -46,6 +47,9 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0,'../')\n",
+    "\n",
     "from src.ecosystem import Ecosystem"
    ],
    "metadata": {
